idai-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: idai-nginx-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: idaithalam-server
    env: dev
